# curry-ghc-language-plugin

./: README.md  curry-ghc-language-plugin.cabal  hie.yaml  parse-ghc-language-plugin.cabal  stack.yaml
sandbox/: sandbox.cabal
sandbox/src/: AddNum.hs  Example.hs  Main.hs  NRev.hs  NRevD.hs  Nat.hs  PermSort.hs  PermSortPeano.hs  PermSortPeanoD.hs  PrimesHO.hs  PrimesHOD.hs  Queens.hs  QueensD.hs  ReverseHO.hs  ReverseHOD.hs  Select.hs  SelectD.hs  SharingAcrossND.hs  SortPrimes.hs  SortPrimesD.hs  TakInt.hs  TakIntD.hs  TakPeano.hs  TakPeanoD.hs
src/Plugin/: CurryPlugin.hs  LanguagePlugin.hs  ParsePlugin.hs
src/Plugin/CurryPlugin/: BuiltIn.hs  Encapsulation.hs  Monad.hs  THEval.hs
src/Plugin/Effect/: Annotation.hs
src/Plugin/ParsePlugin/: BuiltIn.hs  ForeignExport.hs  Monad.hs  Prelude.hs
src/Plugin/Trans/: CreateSyntax.hs  Expr.hs  FunWiredIn.hs  Import.hs  PatternMatching.hs  Preprocess.hs  Record.hs  Type.hs  TysWiredIn.hs  Var.hs
