cabal-version: 3.0
name:          parse-ghc-language-plugin
synopsis:      A compiler plugin to provide parsing as a language feature
version:       0.1.0.0
license:       BSD-3-Clause
license-file:  LICENSE
copyright:     (c) 2019-2020, Kai-Oliver Prott
maintainer:    kai.prott@hotmail.de
author:        Kai-Oliver Prott
category:      Language
build-type:    Simple
stability:     experimental

extra-source-files:
  README.md

source-repository head
  type:     git
  location: https://git.ps.informatik.uni-kiel.de/theses/2020/2020-kprott-ma/

common deps
  hs-source-dirs: src
  build-depends:
    base             ^>= 4.16.0.0,
    ghc              ^>= 9.2,
    ghc-prim         -any,
    template-haskell -any,
    bytestring       -any,
    containers       -any,
    transformers     -any,
    mtl              -any,
    extra            -any,
    split            -any,
    syb              -any,
  ghc-options:      -Wall
  default-language: Haskell2010
  other-extensions:
    TupleSections,
    RecursiveDo,
    EmptyCase,
    LambdaCase,
    OverloadedStrings,
    TypeFamilies,
    RankNTypes,
    ScopedTypeVariables,
    ExistentialQuantification,
    TypeOperators,
    FlexibleContexts,
    FlexibleInstances,
    UndecidableInstances,
    FunctionalDependencies,
    DeriveFunctor,
    DeriveGeneric,
    DeriveDataTypeable,
    GeneralizedNewtypeDeriving,
    DeriveAnyClass,
    EmptyDataDeriving,
    StandaloneDeriving,
    DefaultSignatures,
    MultiParamTypeClasses,
    TemplateHaskell
  other-modules:
    Plugin.Dump
    Plugin.Trans.Config
    Plugin.Trans.Coerce
    Plugin.Trans.Expr
    Plugin.Trans.Import
    Plugin.Trans.Constr
    Plugin.Trans.Class
    Plugin.Trans.CreateSyntax
    Plugin.Trans.ClsInst
    Plugin.Trans.TyCon
    Plugin.Trans.Record
    Plugin.Trans.DictInstFun
    Plugin.Trans.Type
    Plugin.Trans.Util
    Plugin.Trans.Var
    Plugin.Trans.Pat
    Plugin.Trans.LExprEQ
    Plugin.Trans.FunWiredIn
    Plugin.Trans.TysWiredIn
    Plugin.Trans.Preprocess
    Plugin.Trans.Derive
    Plugin.Trans.PatternMatching
    Plugin.Trans.ConstraintSolver
    Plugin.Trans.Rule

library
  import: deps
  exposed-modules:
    Plugin.LanguagePlugin
    Plugin.Effect.Classes
    Plugin.Effect.Transformers
    Plugin.Effect.Annotation

    Plugin.ParsePlugin
    Plugin.ParsePlugin.Prelude
    Plugin.ParsePlugin.BuiltIn
    Plugin.ParsePlugin.Monad
  other-modules:
    Plugin.ParsePlugin.ForeignExport

test-suite tests
  import:         deps
  type:           detailed-0.9
  hs-source-dirs: test
  test-module:    Tests
  other-modules:
    SemanticTests
    Tests.Guards
    Tests.UnknownNat
    Tests.LetPattern
    Tests.Bang

    Plugin.LanguagePlugin
    Plugin.ParsePlugin
    Plugin.ParsePlugin.BuiltIn
    Plugin.ParsePlugin.ForeignExport
    Plugin.ParsePlugin.Prelude
    Plugin.ParsePlugin.Monad
    Plugin.Effect.Classes
    Plugin.Effect.Annotation
    Plugin.Effect.Transformers
  build-depends:
    curry-ghc-language-plugin,
    process   -any,
    filepath  -any,
    directory -any,
    Cabal     ^>= 3.4.0.0
